# bluez-gatt

./: CMakeLists.txt  btgatt-server.c  main.c  udpclient.c  udpclient.h  wifi.patch
includes/: btgatt-server.h
includes/lib/: hci_lib.h  uuid.h
includes/src/shared/: att-types.h  att.h  crypto.h  gatt-client.h  gatt-db.h  gatt-helpers.h  gatt-server.h  io.h  mainloop.h  queue.h  timeout.h  util.h
libbluetooth/: CMakeLists.txt  hci.c
libshared/: CMakeLists.txt  mainloop.c  util.c
